[gd_scene load_steps=15 format=2]

[ext_resource path="res://WorldTileSet.tres" type="TileSet" id=1]
[ext_resource path="res://Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://default_env.tres" type="Environment" id=3]
[ext_resource path="res://World.gd" type="Script" id=4]
[ext_resource path="res://Assets/Pixeled.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://Assets/Tilesheet/monochrome.png" type="Texture" id=6]
[ext_resource path="res://StartMenu.tscn" type="PackedScene" id=7]
[ext_resource path="res://Assets/8BitMenu_David_renda.ogg" type="AudioStream" id=8]
[ext_resource path="res://Assets/Audio_Laser/tone1.ogg" type="AudioStream" id=9]
[ext_resource path="res://Assets/Audio_Impact/impactBell_heavy_003.ogg" type="AudioStream" id=10]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=2]
size = 48
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=4]
size = 22
font_data = ExtResource( 5 )

[node name="World" type="Node2D"]
script = ExtResource( 4 )

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource( 1 )
cell_size = Vector2( 16, 16 )
cell_clip_uv = true
collision_layer = 57
format = 1
tile_data = PoolIntArray( 851969, 14, 0, 851989, 0, 0, 851990, 0, 0, 851991, 0, 0, 851992, 0, 0, 851993, 0, 0, 851994, 0, 0, 851995, 0, 0, 851996, 0, 0, 851997, 0, 0, 851998, 0, 0, 851999, 0, 0, 852000, 0, 0, 852001, 0, 0, 852002, 0, 0, 852003, 0, 0, 852004, 0, 0, 852005, 0, 0, 852006, 0, 0, 852007, 0, 0, 852008, 0, 0, 852009, 0, 0, 852010, 0, 0, 852011, 0, 0, 852012, 0, 0, 852013, 0, 0, 852014, 0, 0, 852015, 0, 0, 852016, 0, 0, 852017, 0, 0, 852018, 0, 0, 852019, 0, 0, 852020, 0, 0, 852021, 0, 0, 852022, 0, 0, 852023, 0, 0, 852024, 0, 0, 917525, 0, 0, 917535, 0, 0, 917542, 0, 0, 917549, 0, 0, 917556, 0, 0, 983061, 0, 0, 983085, 0, 0, 983092, 0, 0, 1048597, 0, 0, 1048621, 19, 0, 1114133, 0, 0, 1114134, 0, 0, 1114135, 0, 0, 1114136, 0, 0, 1114137, 0, 0, 1114138, 0, 0, 1114139, 0, 0, 1114140, 0, 0, 1114141, 0, 0, 1114142, 0, 0, 1114143, 0, 0, 1114144, 0, 0, 1114145, 0, 0, 1114146, 2, 0, 1114147, 2, 0, 1114148, 0, 0, 1114149, 0, 0, 1114150, 0, 0, 1114151, 14, 0, 1114152, 14, 0, 1114153, 14, 0, 1114154, 14, 0, 1114155, 0, 0, 1114156, 0, 0, 1114157, 0, 0, 1114158, 0, 0, 1114159, 0, 0, 1114162, 0, 0, 1114163, 0, 0, 1114164, 0, 0, 1114165, 2, 0, 1114166, 2, 0, 1179669, 0, 0, 1179670, 0, 0, 1179671, 0, 0, 1179672, 0, 0, 1179673, 0, 0, 1179674, 0, 0, 1179675, 0, 0, 1179676, 0, 0, 1179677, 0, 0, 1179678, 0, 0, 1179679, 0, 0, 1179680, 0, 0, 1179681, 0, 0, 1179682, 0, 0, 1179683, 0, 0, 1179684, 0, 0, 1179692, 0, 0, 1179693, 0, 0, 1179694, 0, 0, 1179695, 0, 0, 1179698, 0, 0, 1179699, 0, 0, 1179700, 0, 0, 1179701, 0, 0, 1179702, 0, 0, 1179705, 0, 0, 1245205, 0, 0, 1245206, 0, 0, 1245207, 0, 0, 1245208, 0, 0, 1245209, 0, 0, 1245210, 0, 0, 1245211, 0, 0, 1245212, 0, 0, 1245213, 0, 0, 1245214, 0, 0, 1245215, 0, 0, 1245216, 0, 0, 1245217, 0, 0, 1245218, 0, 0, 1245219, 0, 0, 1245220, 0, 0, 1245222, 11, 0, 1245228, 0, 0, 1245229, 0, 0, 1245230, 0, 0, 1245231, 0, 0, 1245232, 4, 0, 1245233, 4, 0, 1245234, 0, 0, 1245235, 0, 0, 1245236, 0, 0, 1245237, 0, 0, 1245238, 0, 0, 1245241, 0, 0, 1310727, 0, 0, 1310728, 0, 0, 1310729, 0, 0, 1310730, 0, 0, 1310731, 0, 0, 1310732, 0, 0, 1310733, 0, 0, 1310734, 0, 0, 1310735, 0, 0, 1310736, 0, 0, 1310737, 0, 0, 1310738, 0, 0, 1310739, 0, 0, 1310740, 0, 0, 1310741, 0, 0, 1310742, 0, 0, 1310743, 0, 0, 1310744, 0, 0, 1310745, 0, 0, 1310746, 0, 0, 1310747, 0, 0, 1310748, 0, 0, 1310749, 0, 0, 1310750, 0, 0, 1310751, 0, 0, 1310752, 0, 0, 1310753, 0, 0, 1310754, 0, 0, 1310755, 0, 0, 1310756, 0, 0, 1310757, 0, 0, 1310758, 0, 0, 1310759, 0, 0, 1310760, 0, 0, 1310761, 0, 0, 1310762, 0, 0, 1310763, 0, 0, 1310764, 0, 0, 1310765, 0, 0, 1310766, 0, 0, 1310767, 0, 0, 1310768, 0, 0, 1310769, 0, 0, 1310770, 0, 0, 1310771, 0, 0, 1310772, 0, 0, 1310773, 0, 0, 1310774, 0, 0, 1310777, 0, 0, 1376263, 0, 0, 1376264, 0, 0, 1376265, 0, 0, 1376266, 0, 0, 1376313, 0, 0, 1441799, 0, 0, 1441800, 0, 0, 1441801, 0, 0, 1441849, 0, 0, 1507335, 0, 0, 1507336, 0, 0, 1507349, 16, 0, 1507350, 16, 0, 1507351, 16, 0, 1507385, 0, 0, 1572871, 0, 0, 1572884, 16, 0, 1572885, 0, 0, 1572886, 0, 0, 1572887, 0, 0, 1572888, 16, 0, 1572921, 0, 0, 1638407, 0, 0, 1638419, 16, 0, 1638420, 0, 0, 1638424, 0, 0, 1638425, 16, 0, 1638457, 0, 0, 1703943, 0, 0, 1703954, 16, 0, 1703955, 0, 0, 1703961, 0, 0, 1703962, 16, 0, 1703993, 0, 0, 1769479, 0, 0, 1769480, 15, 0, 1769481, 15, 0, 1769490, 0, 0, 1769498, 0, 0, 1769529, 0, 0, 1835015, 0, 0, 1835016, 15, 0, 1835017, 15, 0, 1835034, 0, 0, 1835045, 14, 0, 1835046, 14, 0, 1835065, 0, 0, 1900551, 0, 0, 1900552, 15, 0, 1900553, 15, 0, 1900570, 18, 0, 1900581, 14, 0, 1900582, 14, 0, 1900589, 26, 0, 1900601, 0, 0, 1966087, 0, 0, 1966088, 0, 0, 1966089, 0, 0, 1966090, 0, 0, 1966091, 0, 0, 1966092, 0, 0, 1966093, 4, 0, 1966094, 4, 0, 1966095, 0, 0, 1966097, 0, 0, 1966098, 0, 0, 1966099, 0, 0, 1966100, 0, 0, 1966101, 0, 0, 1966102, 3, 0, 1966103, 0, 0, 1966104, 0, 0, 1966105, 0, 0, 1966106, 0, 0, 1966107, 0, 0, 1966108, 0, 0, 1966109, 14, 0, 1966110, 0, 0, 1966111, 0, 0, 1966112, 0, 0, 1966115, 0, 0, 1966116, 0, 0, 1966117, 0, 0, 1966118, 0, 0, 1966119, 0, 0, 1966120, 0, 0, 1966121, 2, 0, 1966122, 2, 0, 1966123, 0, 0, 1966124, 0, 0, 1966125, 0, 0, 1966126, 0, 0, 1966137, 0, 0, 1966138, 0, 0, 1966139, 0, 0, 1966140, 0, 0, 1966141, 0, 0, 1966142, 0, 0, 1966143, 0, 0, 1966144, 0, 0, 1966145, 0, 0, 1966146, 0, 0, 1966147, 0, 0, 1966148, 0, 0, 1966149, 0, 0, 1966150, 0, 0, 1966151, 0, 0, 1966152, 0, 0, 1966153, 0, 0, 1966154, 0, 0, 1966155, 0, 0, 1966156, 0, 0, 1966157, 0, 0, 1966158, 0, 0, 1966159, 0, 0, 1966160, 0, 0, 1966161, 0, 0, 1966162, 0, 0, 1966163, 0, 0, 1966164, 0, 0, 1966165, 0, 0, 1966166, 0, 0, 1966167, 0, 0, 2031623, 0, 0, 2031624, 15, 0, 2031625, 15, 0, 2031626, 15, 0, 2031627, 15, 0, 2031628, 15, 0, 2031629, 15, 0, 2031630, 15, 0, 2031631, 15, 0, 2031632, 15, 0, 2031633, 15, 0, 2031634, 15, 0, 2031635, 15, 0, 2031636, 15, 0, 2031637, 15, 0, 2031638, 15, 0, 2031639, 15, 0, 2031640, 15, 0, 2031641, 15, 0, 2031642, 0, 0, 2031643, 0, 0, 2031644, 0, 0, 2031645, 14, 0, 2031646, 0, 0, 2031647, 0, 0, 2031648, 0, 0, 2031651, 0, 0, 2031652, 0, 0, 2031653, 0, 0, 2031663, 16, 0, 2031669, 14, 0, 2031670, 14, 0, 2031673, 0, 0, 2031674, 14, 0, 2031675, 14, 0, 2031676, 14, 0, 2031677, 14, 0, 2031678, 14, 0, 2031679, 0, 0, 2031701, 10, 0, 2031703, 0, 0, 2097159, 0, 0, 2097179, 0, 0, 2097180, 0, 0, 2097181, 14, 0, 2097182, 14, 0, 2097183, 14, 0, 2097184, 14, 0, 2097187, 0, 0, 2097188, 0, 0, 2097199, 16, 0, 2097200, 16, 0, 2097205, 14, 0, 2097206, 14, 0, 2097209, 20, 0, 2097210, 14, 0, 2097211, 14, 0, 2097212, 14, 0, 2097213, 14, 0, 2097214, 14, 0, 2097215, 19, 0, 2097219, 26, 0, 2097236, 0, 0, 2097237, 0, 0, 2097238, 0, 0, 2097239, 0, 0, 2162695, 0, 0, 2162697, 11, 0, 2162716, 0, 0, 2162717, 0, 0, 2162718, 0, 0, 2162719, 0, 0, 2162720, 0, 0, 2162722, 10, 0, 2162723, 0, 0, 2162734, 0, 0, 2162735, 0, 0, 2162736, 0, 0, 2162737, 0, 0, 2162738, 0, 0, 2162739, 0, 0, 2162740, 0, 0, 2162741, 0, 0, 2162742, 0, 0, 2162743, 0, 0, 2162744, 0, 0, 2162745, 0, 0, 2162746, 0, 0, 2162747, 0, 0, 2162748, 0, 0, 2162749, 0, 0, 2162750, 0, 0, 2162751, 0, 0, 2162752, 2, 0, 2162753, 0, 0, 2162754, 0, 0, 2162755, 0, 0, 2162756, 0, 0, 2162757, 14, 0, 2162758, 14, 0, 2162759, 14, 0, 2162760, 14, 0, 2162761, 14, 0, 2162762, 14, 0, 2162763, 14, 0, 2162764, 14, 0, 2162765, 14, 0, 2162766, 14, 0, 2162767, 14, 0, 2162768, 14, 0, 2162769, 14, 0, 2162770, 14, 0, 2162771, 14, 0, 2162772, 0, 0, 2162775, 0, 0, 2228231, 0, 0, 2228232, 0, 0, 2228233, 0, 0, 2228234, 0, 0, 2228256, 0, 0, 2228257, 0, 0, 2228258, 0, 0, 2228259, 0, 0, 2228269, 0, 0, 2228270, 0, 0, 2228271, 11, 0, 2228290, 0, 0, 2228292, 0, 0, 2228293, 0, 0, 2228308, 0, 0, 2228311, 0, 0, 2293770, 0, 0, 2293783, 15, 0, 2293784, 15, 0, 2293785, 15, 0, 2293804, 0, 0, 2293805, 0, 0, 2293808, 15, 0, 2293826, 19, 0, 2293828, 0, 0, 2293829, 0, 0, 2293830, 0, 0, 2293844, 18, 0, 2293847, 0, 0, 2359306, 0, 0, 2359319, 15, 0, 2359320, 15, 0, 2359321, 15, 0, 2359339, 0, 0, 2359340, 0, 0, 2359344, 15, 0, 2359345, 15, 0, 2359362, 0, 0, 2359363, 2, 0, 2359364, 0, 0, 2359365, 0, 0, 2359366, 0, 0, 2359367, 0, 0, 2359368, 0, 0, 2359369, 0, 0, 2359370, 0, 0, 2359371, 0, 0, 2359372, 0, 0, 2359373, 0, 0, 2359374, 0, 0, 2359375, 0, 0, 2359376, 0, 0, 2359377, 0, 0, 2359378, 0, 0, 2359379, 0, 0, 2359380, 0, 0, 2359383, 0, 0, 2424842, 0, 0, 2424855, 15, 0, 2424856, 15, 0, 2424857, 15, 0, 2424872, 12, 0, 2424874, 0, 0, 2424875, 0, 0, 2424880, 15, 0, 2424881, 15, 0, 2424882, 15, 0, 2424887, 15, 0, 2424888, 15, 0, 2424889, 15, 0, 2424892, 15, 0, 2424893, 15, 0, 2424894, 15, 0, 2424907, 0, 0, 2424919, 0, 0, 2490377, 0, 0, 2490378, 0, 0, 2490379, 0, 0, 2490380, 0, 0, 2490381, 0, 0, 2490382, 0, 0, 2490383, 0, 0, 2490384, 0, 0, 2490385, 0, 0, 2490386, 0, 0, 2490387, 0, 0, 2490388, 0, 0, 2490389, 0, 0, 2490390, 0, 0, 2490391, 0, 0, 2490392, 0, 0, 2490393, 0, 0, 2490394, 0, 0, 2490395, 0, 0, 2490396, 0, 0, 2490397, 0, 0, 2490398, 3, 0, 2490399, 3, 0, 2490400, 0, 0, 2490401, 0, 0, 2490402, 0, 0, 2490403, 0, 0, 2490404, 0, 0, 2490405, 0, 0, 2490406, 0, 0, 2490407, 0, 0, 2490408, 0, 0, 2490409, 0, 0, 2490410, 0, 0, 2490411, 0, 0, 2490416, 15, 0, 2490417, 15, 0, 2490418, 15, 0, 2490419, 15, 0, 2490423, 15, 0, 2490424, 15, 0, 2490425, 15, 0, 2490428, 15, 0, 2490429, 15, 0, 2490430, 15, 0, 2490443, 0, 0, 2490455, 0, 0, 2555913, 0, 0, 2555915, 12, 0, 2555946, 0, 0, 2555947, 0, 0, 2555948, 0, 0, 2555952, 15, 0, 2555953, 15, 0, 2555954, 15, 0, 2555955, 15, 0, 2555956, 15, 0, 2555959, 15, 0, 2555960, 15, 0, 2555961, 15, 0, 2555964, 15, 0, 2555965, 15, 0, 2555966, 15, 0, 2555979, 19, 0, 2555986, 11, 0, 2555991, 0, 0, 2621449, 0, 0, 2621451, 14, 0, 2621454, 14, 0, 2621457, 14, 0, 2621460, 14, 0, 2621483, 0, 0, 2621484, 0, 0, 2621485, 14, 0, 2621486, 14, 0, 2621487, 14, 0, 2621488, 0, 0, 2621489, 0, 0, 2621490, 0, 0, 2621491, 0, 0, 2621492, 0, 0, 2621493, 0, 0, 2621494, 0, 0, 2621495, 0, 0, 2621496, 0, 0, 2621497, 0, 0, 2621498, 0, 0, 2621499, 0, 0, 2621500, 0, 0, 2621501, 0, 0, 2621502, 0, 0, 2621503, 0, 0, 2621504, 0, 0, 2621505, 0, 0, 2621506, 0, 0, 2621507, 0, 0, 2621508, 0, 0, 2621509, 0, 0, 2621510, 0, 0, 2621511, 0, 0, 2621512, 0, 0, 2621513, 0, 0, 2621514, 0, 0, 2621515, 3, 0, 2621516, 0, 0, 2621517, 0, 0, 2621518, 0, 0, 2621519, 14, 0, 2621520, 14, 0, 2621521, 0, 0, 2621522, 0, 0, 2621523, 0, 0, 2621524, 0, 0, 2621525, 0, 0, 2621526, 0, 0, 2621527, 0, 0, 2686985, 0, 0, 2686987, 14, 0, 2686990, 14, 0, 2686993, 14, 0, 2686996, 14, 0, 2687056, 0, 0, 2687057, 0, 0, 2687058, 0, 0, 2752521, 0, 0, 2752523, 14, 0, 2752526, 14, 0, 2752529, 14, 0, 2752532, 14, 0, 2752553, 26, 0, 2752591, 0, 0, 2752592, 0, 0, 2752593, 0, 0, 2818057, 0, 0, 2818059, 14, 0, 2818062, 14, 0, 2818065, 14, 0, 2818068, 14, 0, 2818070, 0, 0, 2818071, 15, 0, 2818072, 15, 0, 2818073, 15, 0, 2818074, 15, 0, 2818075, 15, 0, 2818076, 15, 0, 2818077, 15, 0, 2818078, 0, 0, 2818087, 0, 0, 2818088, 0, 0, 2818089, 0, 0, 2818090, 0, 0, 2818091, 0, 0, 2818092, 0, 0, 2818126, 0, 0, 2818127, 0, 0, 2818128, 0, 0, 2883593, 0, 0, 2883595, 14, 0, 2883598, 14, 0, 2883601, 14, 0, 2883604, 14, 0, 2883606, 0, 0, 2883607, 15, 0, 2883608, 15, 0, 2883609, 15, 0, 2883610, 15, 0, 2883611, 15, 0, 2883612, 15, 0, 2883613, 15, 0, 2883614, 0, 0, 2883623, 0, 0, 2883627, 0, 0, 2883628, 0, 0, 2883629, 0, 0, 2883630, 0, 0, 2883631, 0, 0, 2883632, 0, 0, 2883633, 0, 0, 2883634, 0, 0, 2883639, 0, 0, 2883640, 0, 0, 2883641, 0, 0, 2883642, 0, 0, 2883648, 0, 0, 2883649, 0, 0, 2883650, 0, 0, 2883651, 0, 0, 2883657, 0, 0, 2883658, 0, 0, 2883659, 0, 0, 2883660, 0, 0, 2883661, 0, 0, 2883662, 0, 0, 2883663, 0, 0, 2883664, 0, 0, 2949129, 0, 0, 2949131, 14, 0, 2949134, 14, 0, 2949137, 14, 0, 2949140, 14, 0, 2949142, 0, 0, 2949143, 15, 0, 2949144, 15, 0, 2949145, 15, 0, 2949146, 15, 0, 2949147, 15, 0, 2949148, 15, 0, 2949149, 15, 0, 2949150, 0, 0, 2949155, 10, 0, 2949159, 0, 0, 2949170, 0, 0, 2949192, 0, 0, 2949193, 0, 0, 2949194, 0, 0, 2949195, 0, 0, 3014665, 0, 0, 3014667, 14, 0, 3014670, 14, 0, 3014673, 14, 0, 3014676, 14, 0, 3014678, 0, 0, 3014679, 15, 0, 3014680, 15, 0, 3014681, 15, 0, 3014682, 15, 0, 3014683, 15, 0, 3014684, 15, 0, 3014685, 15, 0, 3014686, 0, 0, 3014687, 0, 0, 3014688, 0, 0, 3014689, 0, 0, 3014690, 0, 0, 3014691, 0, 0, 3014692, 0, 0, 3014693, 0, 0, 3014694, 0, 0, 3014695, 0, 0, 3014706, 0, 0, 3014727, 0, 0, 3014728, 0, 0, 3014729, 0, 0, 3080194, 0, 0, 3080195, 0, 0, 3080196, 0, 0, 3080197, 0, 0, 3080198, 0, 0, 3080199, 0, 0, 3080200, 0, 0, 3080201, 0, 0, 3080203, 14, 0, 3080206, 14, 0, 3080209, 14, 0, 3080212, 14, 0, 3080214, 0, 0, 3080215, 15, 0, 3080216, 15, 0, 3080217, 15, 0, 3080218, 15, 0, 3080219, 15, 0, 3080220, 11, 0, 3080221, 15, 0, 3080222, 0, 0, 3080242, 0, 0, 3080262, 0, 0, 3080263, 0, 0, 3080264, 0, 0, 3145730, 0, 0, 3145735, 20, 0, 3145736, 19, 0, 3145737, 18, 0, 3145739, 14, 0, 3145742, 14, 0, 3145745, 14, 0, 3145748, 14, 0, 3145750, 0, 0, 3145751, 0, 0, 3145752, 0, 0, 3145753, 0, 0, 3145754, 0, 0, 3145755, 0, 0, 3145756, 2, 0, 3145757, 0, 0, 3145758, 0, 0, 3145778, 0, 0, 3145779, 0, 0, 3145780, 0, 0, 3145781, 0, 0, 3145782, 0, 0, 3145783, 0, 0, 3145784, 0, 0, 3145785, 0, 0, 3145786, 0, 0, 3145787, 0, 0, 3145788, 0, 0, 3145789, 0, 0, 3145790, 0, 0, 3145791, 0, 0, 3145792, 0, 0, 3145793, 0, 0, 3145794, 0, 0, 3145795, 0, 0, 3145796, 0, 0, 3145797, 0, 0, 3145798, 0, 0, 3145799, 0, 0, 3211266, 0, 0, 3211270, 0, 0, 3211271, 0, 0, 3211272, 0, 0, 3211273, 0, 0, 3211274, 0, 0, 3211275, 0, 0, 3211276, 0, 0, 3211277, 0, 0, 3211278, 0, 0, 3211279, 0, 0, 3211280, 0, 0, 3211281, 0, 0, 3211282, 0, 0, 3211283, 0, 0, 3211284, 0, 0, 3211285, 0, 0, 3211286, 0, 0, 3276802, 0, 0, 3276806, 0, 0, 3342338, 0, 0, 3342342, 0, 0, 3407874, 0, 0, 3407878, 0, 0, 3473410, 0, 0, 3473414, 0, 0, 3538946, 0, 0, 3538950, 0, 0, 3604482, 0, 0, 3604486, 0, 0, 3670018, 0, 0, 3670022, 0, 0, 3735554, 0, 0, 3735558, 0, 0, 3801090, 0, 0, 3801094, 0, 0, 3866626, 0, 0, 3866630, 0, 0, 3932162, 0, 0, 3932166, 0, 0, 3997698, 0, 0, 3997702, 0, 0, 4063234, 0, 0, 4063238, 0, 0, 4128770, 0, 0, 4128774, 0, 0, 4194306, 0, 0, 4194310, 0, 0, 4259842, 0, 0, 4259846, 0, 0, 4325378, 0, 0, 4325382, 0, 0, 4390914, 0, 0, 4390918, 0, 0, 4456450, 0, 0, 4456454, 0, 0, 4521986, 0, 0, 4521990, 0, 0, 4653047, 0, 0, 4653048, 0, 0, 4653049, 0, 0, 4653050, 0, 0, 4653051, 0, 0, 4653052, 0, 0, 4653053, 0, 0, 4653054, 0, 0, 4653055, 0, 0, 4587520, 0, 0, 4587521, 0, 0, 4587522, 0, 0, 4587526, 0, 0, 4587527, 0, 0, 4587528, 0, 0, 4587529, 0, 0, 4587530, 0, 0, 4587531, 0, 0, 4587532, 0, 0, 4587533, 0, 0, 4587534, 0, 0, 4587535, 0, 0, 4587536, 0, 0, 4587537, 0, 0, 4718583, 0, 0, 4653073, 0, 0, 4784119, 0, 0, 4718609, 0, 0, 4849655, 0, 0, 4784145, 0, 0, 4915191, 0, 0, 4849681, 0, 0, 4980727, 0, 0, 4980729, 10, 0, 4980730, 11, 0, 4980731, 12, 0, 4980732, 13, 0, 4915212, 21, 0, 4915213, 20, 0, 4915214, 19, 0, 4915215, 18, 0, 4915217, 0, 0, 5046263, 0, 0, 5046264, 0, 0, 5046265, 0, 0, 5046266, 0, 0, 5046267, 0, 0, 5046268, 0, 0, 5046269, 0, 0, 5046270, 0, 0, 4980746, 0, 0, 4980747, 0, 0, 4980748, 0, 0, 4980749, 0, 0, 4980750, 0, 0, 4980751, 0, 0, 4980752, 0, 0, 4980753, 0, 0, 5111799, 0, 0, 5046289, 0, 0, 5177335, 0, 0, 5111825, 0, 0, 5242871, 0, 0, 5177361, 0, 0, 5308407, 0, 0, 5308408, 0, 0, 5308409, 0, 0, 5308410, 0, 0, 5308411, 0, 0, 5308412, 0, 0, 5308413, 0, 0, 5308414, 0, 0, 5308415, 0, 0, 5242880, 0, 0, 5242881, 0, 0, 5242882, 0, 0, 5242883, 0, 0, 5242884, 0, 0, 5242885, 0, 0, 5242886, 0, 0, 5242887, 0, 0, 5242888, 0, 0, 5242889, 0, 0, 5242890, 0, 0, 5242891, 0, 0, 5242892, 0, 0, 5242893, 0, 0, 5242894, 0, 0, 5242895, 0, 0, 5242896, 0, 0, 5242897, 0, 0 )

[node name="TileMapRed" type="TileMap" parent="."]
tile_set = ExtResource( 1 )
cell_size = Vector2( 16, 16 )
collision_layer = 112
collision_mask = 0
format = 1
tile_data = PoolIntArray( 983078, 6, 0, 1048614, 6, 0, 1114167, 6, 0, 1114168, 6, 0, 1835026, 6, 0, 1900562, 6, 0, 2031681, 6, 0, 2097217, 6, 0, 2555989, 26, 0, 2818079, 6, 0, 2818080, 6, 0, 2818081, 6, 0, 2818082, 6, 0, 2818083, 6, 0, 2818084, 6, 0, 2818085, 6, 0, 2818086, 6, 0, 2883635, 6, 0, 2883636, 6, 0, 2883637, 6, 0, 2883638, 6, 0, 2883643, 6, 0, 2883644, 6, 0, 2883645, 6, 0, 2883646, 6, 0, 2883647, 6, 0, 2883652, 6, 0, 2883653, 6, 0, 2883654, 6, 0, 2883655, 6, 0, 2883656, 6, 0, 5046282, 6, 0, 5111818, 6, 0, 5177354, 6, 0 )

[node name="TileMapGreen" type="TileMap" parent="."]
tile_set = ExtResource( 1 )
cell_size = Vector2( 16, 16 )
collision_layer = 104
collision_mask = 2147483648
format = 1
tile_data = PoolIntArray( 2293771, 7, 0, 2293795, 7, 0, 2359307, 7, 0, 2359308, 7, 0, 2359331, 7, 0, 2424843, 7, 0, 2424844, 7, 0, 2424845, 7, 0, 2424867, 7, 0, 2424906, 7, 0, 2490442, 7, 0, 2555978, 7, 0, 2687019, 7, 0, 2752555, 7, 0, 5111806, 7, 0, 5177342, 7, 0, 5242878, 7, 0 )

[node name="TileMapBlue" type="TileMap" parent="."]
tile_set = ExtResource( 1 )
cell_size = Vector2( 16, 16 )
collision_layer = 88
collision_mask = 0
format = 1
tile_data = PoolIntArray( 852025, 0, 0, 917561, 0, 0, 983097, 0, 0, 1048628, 8, 0, 1048633, 0, 0, 1114169, 0, 0, 1966096, 8, 0, 4849656, 8, 0, 4849657, 8, 0, 4849658, 8, 0, 4849659, 8, 0, 4849660, 8, 0, 4849661, 8, 0, 4849662, 8, 0, 4849663, 3, 0, 4784128, 3, 0, 4784136, 2, 0, 4784137, 2, 0, 4784138, 8, 0, 4784139, 8, 0, 4784140, 8, 0, 4784141, 8, 0, 4784142, 8, 0, 4784143, 8, 0, 4784144, 8, 0, 5242883, 4, 0, 5242884, 4, 0, 5242885, 4, 0 )

[node name="TileMapWhite" type="TileMap" parent="."]
tile_set = ExtResource( 1 )
cell_size = Vector2( 16, 16 )
collision_layer = 56
collision_mask = 0
format = 1
tile_data = PoolIntArray( 983071, 9, 0, 1048607, 9, 0 )

[node name="Tutorial" type="Node" parent="."]

[node name="Tutorial1" type="Label" parent="Tutorial"]
margin_left = 404.918
margin_top = 299.335
margin_right = 420.918
margin_bottom = 345.335
rect_scale = Vector2( 0.5, 0.5 )
custom_fonts/font = SubResource( 1 )
text = "A"
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tutorial1_b" type="Label" parent="Tutorial"]
margin_left = 437.418
margin_top = 299.335
margin_right = 453.418
margin_bottom = 345.335
rect_scale = Vector2( 0.5, 0.5 )
custom_fonts/font = SubResource( 1 )
text = "D"
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tutorial2" type="Label" parent="Tutorial"]
margin_left = 524.0
margin_top = 228.0
margin_right = 832.0
margin_bottom = 323.0
rect_scale = Vector2( 0.25, 0.25 )
custom_fonts/font = SubResource( 1 )
text = "Color has to match to
be able to go through"
align = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tutorial2_b" type="Label" parent="Tutorial"]
margin_left = 522.0
margin_top = 258.0
margin_right = 830.0
margin_bottom = 353.0
rect_scale = Vector2( 0.25, 0.25 )
custom_fonts/font = SubResource( 1 )
text = "Stand"
align = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tutorial3" type="Label" parent="Tutorial"]
margin_left = 622.0
margin_top = 292.0
margin_right = 1049.0
margin_bottom = 387.0
rect_scale = Vector2( 0.25, 0.25 )
custom_fonts/font = SubResource( 1 )
text = "can break same 
color blocks"
align = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tutorial3_b" type="Label" parent="Tutorial"]
margin_left = 564.0
margin_top = 292.0
margin_right = 991.0
margin_bottom = 387.0
rect_scale = Vector2( 0.25, 0.25 )
custom_fonts/font = SubResource( 1 )
text = "Pick up"
align = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TutorialControls_2" type="Label" parent="Tutorial"]
margin_left = 724.0
margin_top = 299.335
margin_right = 804.0
margin_bottom = 394.335
rect_scale = Vector2( 0.5, 0.5 )
custom_fonts/font = SubResource( 1 )
text = "W"
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WinScreen" type="Label" parent="Tutorial"]
margin_left = 22.0
margin_top = 1186.0
margin_right = 449.0
margin_bottom = 1321.0
rect_scale = Vector2( 0.25, 0.25 )
custom_fonts/font = SubResource( 2 )
text = "YOU WIN!"
align = 1
valign = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WinScreen2" type="Label" parent="Tutorial"]
margin_left = -128.0
margin_top = 1232.0
margin_right = 256.0
margin_bottom = 1423.0
rect_scale = Vector2( 0.25, 0.25 )
custom_fonts/font = SubResource( 3 )
text = "(ran out of ideas to
make more puzzles)"
align = 1
valign = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WinScreen3" type="Label" parent="Tutorial"]
margin_left = 176.0
margin_top = 1232.0
margin_right = 568.0
margin_bottom = 1424.0
rect_scale = Vector2( 0.25, 0.25 )
custom_fonts/font = SubResource( 4 )
text = "Thanks for playing!"
align = 1
valign = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Arrow" type="Sprite" parent="Tutorial"]
position = Vector2( 392, 312 )
rotation = -1.5708
texture = ExtResource( 6 )
region_enabled = true
region_rect = Rect2( 408, 204, 16, 16 )

[node name="Arrow2" type="Sprite" parent="Tutorial"]
position = Vector2( 456, 312 )
rotation = 1.5708
texture = ExtResource( 6 )
region_enabled = true
region_rect = Rect2( 408, 204, 16, 16 )

[node name="Arrow3" type="Sprite" parent="Tutorial"]
position = Vector2( 728, 296 )
scale = Vector2( 0.75, 0.75 )
texture = ExtResource( 6 )
region_enabled = true
region_rect = Rect2( 408, 204, 16, 16 )

[node name="Mouse" type="Sprite" parent="Tutorial"]
position = Vector2( 664, 248 )
texture = ExtResource( 6 )
region_enabled = true
region_rect = Rect2( 493, 255, 16, 16 )

[node name="Sounds" type="Node" parent="."]

[node name="Checkpoint" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 9 )
volume_db = -20.0

[node name="KeyPickedUp" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 10 )
volume_db = -20.0
pitch_scale = 2.5

[node name="StartMenuBackground" type="CanvasModulate" parent="."]
color = Color( 1, 1, 1, 0.196078 )

[node name="StartMenu" parent="StartMenuBackground" instance=ExtResource( 7 )]

[node name="Player" parent="." instance=ExtResource( 2 )]
position = Vector2( 392, 248 )

[node name="Camera2D" type="Camera2D" parent="Player"]
current = true
zoom = Vector2( 0.5, 0.5 )

[node name="BackgroundMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
volume_db = -32.0
autoplay = true

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = ExtResource( 3 )
